[project]
name = "textembeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "umap-learn>=0.5.12",
]
